--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "npm run dev --workspaces --if-present",
+    "dev": "concurrently -n \"api,web,docs\" -c \"blue,green,magenta\" \"npm run dev -w apps/api\" \"npm run dev -w apps/web\" \"npm run dev -w apps/docs\"",
     "build": "npm run build --workspaces --if-present"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
